--- a/ch03/nabar3.html
+++ b/ch03/nabar3.html
@@ -4,29 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>상단 메뉴 만들기</title>
     <link rel="stylesheet" href="./css/nav2.css">
-    <style>
-        
-    </style>
 </head>
-<body id="container">
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#">애완견</a></li>
-                <li><a href="#">입양하기</a></li>
-                <li><a href="#">건강돌보기</a></li>
-                <li><a href="#">더불어살기</a></li>
-                
-            </ul>
-        </nav>
-    </header>
-        <!-- section -->
+<body>
+    <div id="container">
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">애완견 종류</a></li>
+                    <li><a href="#">입양하기</a></li>
+                    <li><a href="#">건강돌보기</a></li>
+                    <li><a href="#">더불어살기</a></li>
+                </ul>
+            </nav>
+        </header>
+        <!-- 본문 -->
         <section>
             <h1>애완견 종류</h1>
         </section>
-   
-    <!-- footer -->
+    </div>
 </body>
 </html>
