--- a/ch03/navbar.html
+++ b/ch03/navbar.html
@@ -12,7 +12,8 @@
         ul li{ 
             border: 1px solid #ccc;
             padding: 20px 40px;
-            display: inline-block;
+            /* display: inline-block; */
+            cursor: pointer;
         }
         a{text-decoration: none; color: black;}
         ul li:hover{ background-color: #eee;}
