--- a/ch03/display.html
+++ b/ch03/display.html
@@ -13,7 +13,9 @@
         }
 
         .none{
+            /* 이미지 숨기기 - 공간도 삭제됨 */
             display: none;
+            
         }
         </style>
 </head>
