--- a/ch04/textarea.html
+++ b/ch04/textarea.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <form method="post">
+    <form method="get">
         <fieldset>
             <legend>배송업체</legend>
             <!-- rows=보이는 행의 수, cols=글자수, placeholder=흰트문자 -->
