--- a/dream_jeju/aboutme.html
+++ b/dream_jeju/aboutme.html
@@ -42,7 +42,6 @@
                     
                     <li>국비 과정 : 안드로이드 네이티브 & 하이브리드 앱개발 (22.06 ~ 22. 12)</li>
                     <li>국비 과정 : 프로젝트 기반 자바(스프링,백엔드)&파이썬(OCR) 풀스택 웹 개발자 양성과정 (23.03 ~ 23.09)</li>
-                    <li>국비 과정 : 프로젝트 기반 자바(스프링,백엔드)&파이썬(OCR) 풀스택 웹 개발자 양성과정 (03/16 ~ 09/20)</li>
                     <li>대학교 : 연성대학교 보건의료행정학과 (3년제 졸업)(17~22)</li>
                     <li>대학교 : 방송통신대학교 컴퓨터과학과 3학년 편입(23.02)</li>
                     <li>경  력 : 비트컴퓨터 SE팀 21.10~22.04</li>
@@ -50,7 +49,7 @@
                     
                 </div>
                 <div id="about-bottom">
-                    <h1>프로젝트 수력기록 (예상도)</h1>
+                    <h1>프로젝트 수력기록 (예상도 기술스택 쓰긴햇는데 만든프로젝트로 이동시키려함)</h1>
                     <li>Backend | Python, Java, C#</li>
                     <li>Front | HTML, CSS, JavaScript</li>
                     <li>DB | Oracle, MySQL, H2, SQLite3</li>
