--- a/dream_jeju/qna.html
+++ b/dream_jeju/qna.html
@@ -107,7 +107,7 @@
                     
                 </table>
                 <div  class="btn">
-                    <button type="submit">글쓰기</button>
+                    <a href="./register.html"><button type="submit">글쓰기</button></a>
                 </div>
             </section>
             
