--- a/ch05/transition1.html
+++ b/ch05/transition1.html
@@ -16,9 +16,16 @@
 
             /* transition-property: width, height;
             transition-duration: 2s, 1s ; */
-            transition: width, height,background-color, 1s, 2s, 0.5s;
+            /* transition: width, height,background-color, 1s, 2s, 0.5s; */
             /* 모든 속성에 대해 시간을 똑같이 설정 */
-            /* transition: all 0.5s; */
+            /* ease가 들어가면 느리다! */
+            transition: all 2s ease-in; 
+            /*
+                ease-in     :  느리게 시작
+                ease-out    : 느리게 끝남
+                ease-in-out : 느리게 시작하고 느리게 끝남
+            */
+
         }
         .tr:hover{
             width: 200px;
