--- a/ch07/4_justify-content.html
+++ b/ch07/4_justify-content.html
@@ -19,7 +19,7 @@
             /* 주축에 동일한 간격으로 배치 */
             /* justify-content: space-around; */
             /* 주축에 시작과 끝점에 배치한 후 동일한 간격으로 배치 */
-            /* justify-content: space-between; */
+            justify-content: space-between;
         }
         .box{
             width: 80px;
