--- a/bootstrap/3_main_copy.html
+++ b/bootstrap/3_main_copy.html
@@ -5,20 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>부트 스트랩</title>
-  <!-- <link rel="stylesheet" href="./css/bootstrap.css"> -->
+  <title>부트스트랩</title>
+  <!-- <link rel="stylesheet" href="./css/bootstrap.css">
+  <script src="./js/bootstrap.js"></script> -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E="
-    crossorigin="anonymous"></script>
   <style>
     @media screen and (min-width: 320px) and (max-width: 780px) {
+      header h1.display-4 {
+        font-size: 2.2rem;
+      }
+
       header .title {
         padding: 10px 5% 0;
       }
+
 
       .col-4 {
         width: 90%;
@@ -29,15 +33,13 @@
       .col-6 {
         width: 90%;
         margin: 0 5%;
+        text-align: center;
       }
 
-      .card img {
-        border-radius: 5px;
+      body::-webkit-scrollbar {
+        display: none;
       }
-    }
 
-    .scroll::-webkit-scrollbar {
-      display: none;
     }
   </style>
 </head>
@@ -47,15 +49,16 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">GoodMall</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#">Good Mall</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="#">mall 소개</a>
+                <a class="nav-link" aria-current="page" href="#">mall 소개</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">카테고리</a>
@@ -63,14 +66,17 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">공지사항</a>
               </li>
+
             </ul>
+
           </div>
         </div>
       </nav>
       <div class="title my-3">
-        <h1 class="display-4">Welcome to Shopping Mall</h1></strong>
-        <p class="lead">좋은 품질, 착한 가격을 만나보세요.</p></strong>
-        <hr class="my-4">
+        <!-- 제목 영역(배너 영역) -->
+        <h1 class="display-4">Welecom to Shopping Mall</h1>
+        <p class="lead">좋은 품질 팍한 가격을 만나보세요</p>
+        <hr>
       </div>
     </header>
     <section>
@@ -80,10 +86,10 @@
             <div class="card-body">
               <h5 class="card-title">다양한 상품</h5>
               <p class="card-text">
-              <p>당신과 가장 가까운 마트</p>
-              <p>장보기의 기쁨을 더합니다.</p>
+                당신과 가장 가까운마트..
+                당신과 기쁨을 더합니다.
               </p>
-              <a href="#" class="btn btn-primary">상세정보 &raquo;</a>
+              <a href="#" class="btn btn-primary">상세 정보 &raquo;</a>
             </div>
           </div>
         </div>
@@ -92,26 +98,27 @@
             <div class="card-body">
               <h5 class="card-title">질좋은 상품</h5>
               <p class="card-text">
-              <p>당신과 가장 가까운 마트</p>
-              <p>장보기의 기쁨을 더합니다.</p>
+                당신과 가장 가까운마트..
+                당신과 기쁨을 더합니다.
               </p>
-              <a href="#" class="btn btn-success">상세정보 &raquo;</a>
+              <a href="#" class="btn btn-secondary">상세 정보 &raquo;</a>
             </div>
           </div>
         </div>
         <div class="col-4">
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">합리적 가격</h5>
+              <h5 class="card-title">가격 정보</h5>
               <p class="card-text">
-              <p>당신과 가장 가까운 마트</p>
-              <p>장보기의 기쁨을 더합니다.</p>
+                당신과 가장 가까운마트..
+                당신과 기쁨을 더합니다.
               </p>
-              <a href="#" class="btn btn-secondary">상세정보 &raquo;</a>
+              <a href="#" class="btn btn-success">상세 정보 &raquo;</a>
             </div>
           </div>
         </div>
-        <!-- 상품 이미지 -->
+        <!-- 상품카테고리 끝 -->
+        <!-- 상품이미지 -->
         <div class="col-6 my-3 text-center">
           <div class="card">
             <div class="card-body">
@@ -125,7 +132,7 @@
         </div>
         <div class="col-6 my-3 text-center">
           <div class="card">
-            <div class=" card-body">
+            <div class="card-body">
               <h5 class="card-title">상품 정보 2</h5>
               <img src="../images/prod2.jpg">
               <p class="cart-text my-2">
@@ -134,10 +141,10 @@
             </div>
           </div>
         </div>
+        <!-- row 끝 -->
       </div>
     </section>
-
-    <footer class="py-4 bg-dark">
+    <footer class="bg-dark py-3">
       <div class="container">
         <p style="color:#ccc;">
           브랜드명 : GoodMall ㅣ 대표자 : 다있소 ㅣ 사업자등록번호 : 123-12-12345<br>
