--- a/ch05/after.html
+++ b/ch05/after.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>after 선택자</title>
+    <title>::after 선택자</title>
     <style>
-        li{margin: 15px;}
-        li.new::after{
-            content:"NEW";
+        li {
+            margin: 15px;
+        }
+
+        li.new::after {
+            content: "NEW";
             background: red;
             color: white;
             font-size: 10px;
@@ -18,6 +22,7 @@
         }
     </style>
 </head>
+
 <body>
     <article class="goods">
         <h2>상품 목록</h2>
@@ -29,4 +34,5 @@
         </ul>
     </article>
 </body>
+
 </html>
